--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,33 @@
-playwright==1.40.0
-requests==2.31.0
-openai==1.35.0
-instructor==1.3.0
-pydantic==2.7.0
-tqdm==4.66.0
-yfinance==0.2.28
-pandas>=2.0.0
-python-dotenv==1.0.0
+# Core data processing
+pandas==2.2.3
+numpy==2.1.3
+openpyxl==3.1.5
+opencv-python==4.10.0.84
+umap-learn==0.5.7
+
+# Web scraping and API clients
+playwright==1.48.0
+requests==2.32.3
+beautifulsoup4==4.12.3
+yfinance==0.2.50
+python-dotenv==1.0.1
+
+# AI/ML - OpenAI and related
+openai==1.54.5
+httpx==0.27.0
+httpcore==1.0.6
+instructor==1.7.0
+pydantic==2.10.3
+tiktoken==0.8.0
+
+# AI/ML - Local embeddings and similarity
+sentence-transformers==3.3.1
+torch==2.5.1
+scikit-learn==1.6.0
+
+# Visualization and reporting
+matplotlib==3.9.3
+seaborn==0.13.2
+
+# Utilities
+tqdm==4.67.1
